Include config enviroment instructions to generate RPM

--- a/README
+++ b/README
@@ -1,1 +1,15 @@
 Repository of RPM PHP-ADOdb extension for CentOS
+
+To generate RPM use:
+
+ # yum groupinstall "Development Tools" 
+ # yum install rpmdevtools
+ # yum install rpmlint
+
+ # useradd makerpm
+
+ # [makerpm@local ~]$ rpmdev-setuptree
+
+ # [makerpm@local ~]$ rpmbuild -ba NOMBRE.spec
+
+More detail in http://fedoraproject.org/wiki/How_to_create_an_RPM_package
